Fix bottom border cutoff using height 100% chain

--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,7 @@
     -webkit-user-select: none;
   }
   html {
+    height: 100%;
     background-color: #1C1C1E;
     overscroll-behavior: none;
   }
@@ -130,6 +131,7 @@
     background-color: #FAFAF7;
   }
   body {
+    height: 100%;
     background-color: #1C1C1E;
     color: var(--text);
     touch-action: manipulation;
@@ -139,6 +141,7 @@
     background-color: #FAFAF7;
   }
   #root {
+    height: 100%;
     touch-action: manipulation;
   }
 }
